--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "macsidigital",
         "laravel-api-client"
     ],
-    "homepage": "https://github.com/macsidigital/laravel-api-client",
+    "homepage": "https://github.com/atouiahmed/laravel-api-client",
     "license": "MIT",
     "type": "library",
     "authors": [{
@@ -13,17 +13,17 @@
         "email": "colin@macsi.co.uk"
     }],
     "require": {
-        "php": "^7.3|^8.0|^8.1",
-        "nesbot/carbon": "^1.26.3 || ^2.0",
-        "guzzlehttp/guzzle": "~7.0|~6.0|~5.0|~4.0",
+        "php": "^8.2|^8.3",
+        "nesbot/carbon": "^2.0|^3.0",
+        "guzzlehttp/guzzle": "~7.0",
         "guzzlehttp/oauth-subscriber": "^0.6.0",
         "firebase/php-jwt": "^6.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
         "macsidigital/laravel-oauth2-client": "^1.2|^2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0|^5.0|^6.0|^7.0",
-        "phpunit/phpunit": "^8.0|^9.0|^10.0"
+        "orchestra/testbench": "^4.0|^5.0|^6.0|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.0|^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
